# yaner

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  pr.yml
benches/: cpu.rs  ppu.rs
cpu/: Cargo.toml  build.rs
cpu/src/: lib.rs  opcode_table.csv  opcode_table.html  operations.rs
src/: helper.rs  lib.rs  main.rs
src/apu/: frame_counter.rs  mod.rs
src/cartridge/: mapper.rs  mod.rs  rom.rs  sxrom.rs
src/cartridge/mapper/: cnrom.rs  mmc3.rs  mod.rs  nrom.rs  sxrom.rs
src/cpu/: absolute.rs  absolute_indexed.rs  accumulator.rs  bus.rs  debug.rs  dma.rs  generator.rs  immediate.rs  implicit.rs  indirect.rs  indirect_indexed.rs  instr.rs  mod.rs  opcode.rs  relative.rs  stack.rs  zero_page.rs  zero_page_indexed.rs
src/cpu/mode/: absolute.rs  absolute_indexed.rs  accumulator.rs  immediate.rs  implicit.rs  indirect.rs  indirect_indexed.rs  mod.rs  relative.rs  stack.rs  zero_page.rs  zero_page_indexed.rs
src/input/: mod.rs
src/memory/: mod.rs
src/nes/: debug.rs  dma.rs  mod.rs
src/ppu/: debug.rs  mod.rs  reg.rs  renderer.rs  rgb.rs  sprite.rs  vram_address.rs
src/retro/: mod.rs
src/rom/: mod.rs
src/tests/: mod.rs
src/tui/: mod.rs
tests/: accuracy_coin.rs  blargg.rs  cpu.rs  mesen.rs  mod.rs  nestest.rs  ppu.rs
tests/common/: blargg.rs  mod.rs
yaner-egui/: Cargo.toml
yaner-egui/src/: main.rs  menubar.rs
