[workspace]
resolver = "3"
members = [".", "cpu"]

[package]
name = "yaner"
version = "0.1.0"
authors = ["Philippe Laflamme <philippe.laflamme@gmail.com>"]
edition = "2024"

[dependencies]
yaner-cpu = { path = "cpu" }
structopt = "0.3.4"
bitflags = "2.4"
bitregions = "0.2.4"
nom = "7"
log = "0.4.8"
stderrlog = "0.5.4"
rand = "0.8.5"
ouroboros = "0"

# terminal ui
ratatui = { version = "0.25", features = ["termion"], default-features = false }
# align with ratatui
termion = "2"
anyhow = "1.0.32"

# libretro
libretro-backend = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
test-case = "3.3.1"
pprof = { version = "0.15", features = ["criterion", "flamegraph"] }
env_logger = "0.11"

# Disable benchmarks in the lib and binary modules
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "yaner"
bench = false

[[bench]]
name = "cpu"
harness = false

[[bench]]
name = "ppu"
harness = false
