[package]
name = "yaner-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui_extras = { version = "0.25.0", features = ["image"] }
fast_image_resize = "2.7.3"
image = { version = "0.24.8", default-features = false }
itertools = "0.12.0"
rfd = "0.13.0"
yaner = { path = ".." }
